# Orbital-Guardian-A-Satellite-FDIR-Simulator

./: .gitignore  README.md  pyproject.toml
configs/: fdir_demo.json  nominal.json  power_fault.json  thermal_sensor_fault.json
docs/: architecture.md  roadmap.md
notebooks/: 01_baseline_simulator.ipynb  02_fdir_scenario_comparison.ipynb
src/orbital_guardian/: __init__.py  batch.py  cli.py  config.py  environment.py  modes.py  simulation.py  types.py
src/orbital_guardian/faults/: __init__.py  library.py
src/orbital_guardian/fdir/: __init__.py  logic.py
src/orbital_guardian/reporting/: __init__.py  plots.py  summary.py
src/orbital_guardian/subsystems/: __init__.py  attitude.py  power.py  thermal.py
tests/: test_simulation.py
