[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-guardian"
version = "0.1.0"
description = "A modular small-satellite FDIR simulator for power, thermal, and operational fault response studies."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Student Portfolio Project" }
]
dependencies = []

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

